<resources>
    <string name="app_name">Summer Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_accounts">Accounts</string>
    <string name="menu_history">History</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_targets">Targets</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_name_hint">Name</string>
    <string name="profit">Profit</string>
    <string name="expense">Expense</string>
    <string name="remittance">Remittance</string>
    <string name="add_button">Add</string>
    <string name="sum_hint">Sum</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_ac_name_hint">name</string>
    <string name="acc_switch_label">Use it to count whole budget?</string>
    <string name="delete_op_dialog">Do you want to delete this operation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_dialog_title">Deletion</string>
    <string name="no_category">No category</string>
    <string name="entertainment">Entertainment</string>
    <string name="transport">Transport</string>
    <string name="food">Food</string>
    <string name="other">Other</string>
    <string name="fill_target_field_request">Fill Target field</string>
    <string name="update_button">Update</string>
    <string name="acc_cash">Cash</string>
    <string name="acc_creditcard">Credit Card</string>
    <string name="name_request">Name can\'t be empty!</string>
    <string name="profit_category">Profit</string>
    <string name="expense_category">Expense</string>
    <string name="remittance_category">Remittance</string>
    <string name="acc_del_dialog">Are you sure you want to delete it? All operations will also be deleted</string>
    <string name="fill_fields_request">Fill all fields, please</string>
    <string name="settings">Settings</string>
    <string name="target_message_daily">a day</string>
    <string name="target_message_fail">Oops! Outdated</string>
    <string name="del_dialog_cat">Are you sure you want to delete this category?</string>
    <string name="history_label">Operations History</string>
    <string name="new_op_label">New Operation</string>
    <string name="accounts_label">Accounts</string>
    <string name="new_ac_label">New Account</string>
    <string name="edit_ac_label">Edit Account</string>
    <string name="categories_label">Categories</string>
    <string name="new_cat_label">New Category</string>
    <string name="edit_cat_label">Edit Category</string>
    <string name="targs_label">Targets</string>
    <string name="edit_targ_label">Edit Target</string>
    <string name="new_targ_label">New Target</string>
    <string name="settings_label">Settings</string>
    <string name="target_message_success">Well done!</string>
    <string name="profit_cat_type">Profit</string>
    <string name="expense_cat_type">Expense</string>
    <string name="remittance_cat_type">Remittance</string>
    <string name="cash_acc_type">Cash</string>
    <string name="credit_acc_type">Credit Card</string>
    <string name="target_acc_type">Target</string>


</resources>
