<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/historyFragment">

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.pryanya.summerwallet.presentation.ops.history.HistoryFragment"
        android:label="@string/history_label">
        <action
            android:id="@+id/action_historyFragment_to_newOperationFragment"
            app:destination="@id/newOperationFragment" />
    </fragment>
    <fragment
        android:id="@+id/newOperationFragment"
        android:name="com.pryanya.summerwallet.presentation.ops.newoperation.NewOperationFragment"
        android:label="@string/new_op_label">
        <argument
            android:name="type"
            app:argType="integer" />
        <action
            android:id="@+id/action_newOperationFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountsFragment"
        android:name="com.pryanya.summerwallet.presentation.accs.accounts.AccountsFragment"
        android:label="@string/accounts_label">
        <action
            android:id="@+id/action_accountsFragment_to_newAccountFragment"
            app:destination="@id/newAccountFragment" />
        <action
            android:id="@+id/action_accountsFragment_to_editAccountFragment"
            app:destination="@id/editAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/newAccountFragment"
        android:name="com.pryanya.summerwallet.presentation.accs.newaccount.NewAccountFragment"
        android:label="@string/new_ac_label">
        <action
            android:id="@+id/action_newAccountFragment_to_accountsFragment"
            app:destination="@id/accountsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editAccountFragment"
        android:name="com.pryanya.summerwallet.presentation.accs.editaccount.EditAccountFragment"
        android:label="@string/edit_ac_label"
        tools:layout="@layout/edit_account_fragment">
        <action
            android:id="@+id/action_editAccountFragment_to_accountsFragment"
            app:destination="@id/accountsFragment" />
        <argument
            android:name="accountId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.pryanya.summerwallet.presentation.cats.categories.CategoriesFragment"
        android:label="@string/categories_label" >
        <action
            android:id="@+id/action_categoriesFragment_to_newCategoryFragment"
            app:destination="@id/newCategoryFragment" />
        <action
            android:id="@+id/action_categoriesFragment_to_editCategoryFragment"
            app:destination="@id/editCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/newCategoryFragment"
        android:name="com.pryanya.summerwallet.presentation.cats.newcategory.NewCategoryFragment"
        android:label="@string/new_cat_label" >
        <action
            android:id="@+id/action_newCategoryFragment_to_categoriesFragment"
            app:destination="@id/categoriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/editCategoryFragment"
        android:name="com.pryanya.summerwallet.presentation.cats.editcategory.EditCategoryFragment"
        android:label="@string/edit_cat_label"
        tools:layout="@layout/edit_category_fragment" >
        <argument
            android:name="categoryId"
            app:argType="long" />
        <action
            android:id="@+id/action_editCategoryFragment_to_categoriesFragment"
            app:destination="@id/categoriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/targetsFragment"
        android:name="com.pryanya.summerwallet.presentation.targs.targets.TargetsFragment"
        android:label="@string/targs_label" >
        <action
            android:id="@+id/action_targetsFragment_to_editTargetFragment"
            app:destination="@id/editTargetFragment" />
        <action
            android:id="@+id/action_targetsFragment_to_newTargetFragment"
            app:destination="@+id/newTargetFragment" />
    </fragment>
    <fragment
        android:id="@+id/editTargetFragment"
        android:name="com.pryanya.summerwallet.presentation.targs.edittarget.EditTargetFragment"
        android:label="@string/edit_targ_label"
        tools:layout="@layout/fragment_edit_target">
        <action
            android:id="@+id/action_editTargetFragment_to_targetsFragment"
            app:destination="@id/targetsFragment" />
        <argument
            android:name="targetId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/newTargetFragment"
        android:name="com.pryanya.summerwallet.presentation.targs.newtarget.NewTargetFragment"
        android:label="@string/new_targ_label"
        tools:layout="@layout/fragment_new_target">
        <action
            android:id="@+id/action_newTargetFragment_to_targetsFragment"
            app:destination="@id/targetsFragment" />
    </fragment>
</navigation>